automatically backed up by learn

--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -26,7 +26,7 @@
 </table><br>
 
 <% if @user %>
-  <p><%= link_to "Back to Profile", user_path(@user), {:class => "btn btn-primary"} %></p>
+  <p><%= link_to "Back to Profile", user_path(@user), {class: "btn btn-primary"} %></p>
 <% else %>
   <p><%= link_to "New Attraction", new_attraction_path %></p>
 <% end %>
