--- a/app/views/attractions/show.html.erb
+++ b/app/views/attractions/show.html.erb
@@ -1,3 +1,4 @@
+<p id="notice"><%= notice %></p>
 <div class="center">
   <div class="info">
     <p><strong>Name: </strong><%= @attraction.name %></p>
