--- a/app/views/attractions/show.html.erb
+++ b/app/views/attractions/show.html.erb
@@ -14,7 +14,7 @@
         <%= tag(:input, type: "hidden", name: request_forgery_protection_token.to_s, value: form_authenticity_token) %>
         <%= tag(:input, type: "hidden", name: :user_id, value: current_user.id) %>
         <%= tag(:input, type: "hidden", name: :attraction_id, value: @attraction.id) %>
-        <input class="btn btn-light" type="submit" value="Go On Ride">
+        <input class="btn btn-light" type="submit" value="Go on this ride">
       </form>
     <% end %>
     <%= link_to 'Back', attractions_path, class: "btn btn-primary btn-light" %>
