--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,10 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            
+            <% if current_user %>
+              <li><%= link_to "Hello, #{current_user.name}!", user_path(current_user) %></li>
+            <% else %>  
+            <% end %>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
