--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,9 @@
           <ul class="nav navbar-nav">
             <% if current_user %>
               <li><%= link_to "Hello, #{current_user.name}!", user_path(current_user) %></li>
-            <% else %>  
+              <li><%= link_to "Attractions", attractions_path %></li>
+              <li><%= link_to "Hello, #{current_user.name}!", user_path(current_user) %></li>
+            <% else %>
             <% end %>
           </ul>
         </div><!--/.nav-collapse -->
