--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
 <div class="center">
   <div class="info">
     <% if @user.admin %>
-      <p><strong>Admin</strong></p>
+      <p><strong>ADMIN</strong></p>
     <% end %>
     <p><strong>Name: </strong><%= @user.name %></p>
     <p><strong>Tickets: </strong><%= @user.tickets %></p>
