--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,6 +16,6 @@
     <p><strong>Tickets: </strong><%= @user.tickets %></p>
     <p><strong>Mood: </strong><%= @user.mood %></p>
     <p><%= link_to 'Edit', edit_user_path(@user) %></p>
-    <p><%= link_to 'See Attractions', attractions_path %></p>
+    <p><%= link_to 'See attractions', attractions_path %></p>
   </div>
 </div>
