--- a/app/views/attractions/_form.html.erb
+++ b/app/views/attractions/_form.html.erb
@@ -8,7 +8,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :height, "Height Requirement (in inches)" %><br><%= f.number_field :height, class: "form-control" %>
+    <%= f.label :min_height, "Height Requirement (in inches)" %><br><%= f.number_field :min_height, class: "form-control" %>
   </div>
 
   <div class="form-group">
